[fix: #262] Fix background overflow
- Remove "overflow: auto" from _atgrid.scss
- Move the background declaration to body instead of :root

--- a/src/_atgrid.scss
+++ b/src/_atgrid.scss
@@ -11,7 +11,6 @@
     max-width: $container-width;
     padding-left: $gutter / 2;
     padding-right: $gutter / 2;
-    overflow: auto;
   }
 
   [#{$prefix}grid] {
